sites/all/themes/atwork_zen/sass/components/misc/_activity_feed.scss
/* ... */
//--------- Social Side Activity Feed

//----- General Layout
#social-side {
  // start all Header items 
  h2 {
    position: absolute;
    left: 0;
    top: 0;
    z-index: 99;
  }
  .block-header-inner { 
    float: right;
    margin-top: -3px;
  }
  .activity-filters-my,
  .activity-filters-all {
    border: none;
  }
  .activity-filters-my {// button to show filters for my-actions
    background: url(/sites/all/themes/atwork_zen/images/icons/activity-selectors-my-off.png) no-repeat center center;
    &.active,
    &:hover {
      background: url(/sites/all/themes/atwork_zen/images/icons/activity-selectors-my-on.png) no-repeat center center;
    }
    &:hover {
      opacity: 0.7;
    }
  }
  .activity-filters-all {// button to show filters for all-activity
    width: 68px;
    background: url(/sites/all/themes/atwork_zen/images/icons/activity-selectors-all-off.png) no-repeat center center;
    &.active,
    &:hover {
      background: url(/sites/all/themes/atwork_zen/images/icons/activity-selectors-all-on.png) no-repeat center center;
    }
    &:hover {
      opacity: 0.7;
    }
  }
  .jsNewActivityWindow {// the pop-out linked button
    margin-right: 6px;
    &:hover {
      opacity: 0.7;
    }
    img {
      margin-bottom: -6px;
    }
  }
  // start Advanced Filters
  .user-advanced-feed-settings-view { // hide for regular users
    display: none;
  }
  .admin-advanced-feed-settings-view { // show for admins and editors
    display: block;
  }
  // end Advanced Filters

  // end all Header items 

  // start feed-ad-space
    .feed-ad-space-image { // Lives outside of the ad-space container
      margin-bottom: -6px; // bring the adspace box up to the image
      text-align: center;
      background-color: #26669E;
    }
    .feed-ad-space-outer { // Everything within the ad-space container
      border: 1px solid grey;
      padding: 1em;
      background: #D7D7D7;
      position: relative;
    }

    .feed-ad-space-content {
      font-size: 13px;
      margin-bottom: 1em;
      h2 {
        position: inherit;
        line-height: 1.2em;
        font-family: Arial, Helvetica, sans-serif;
        letter-spacing: 0px;
        width: inherit !important;
        text-transform: uppercase;
        font-size: 12px;
      }
      p {
        margin: 1em 0;
        &:first-child {
          margin-top: 0;
        }
        img { // any inline image
          margin-right: 7px;
          margin-bottom: 4px;
        }
      }
    }
    .feed-ad-space-author-date {
      font-size: 10px;
    }

    // end feed-ad-space

  .atwork-activity-block-container {
    margin-top: 46px; // push down the container because the header is positioned absolutely
  }
  #atwork-activity-form {
    .form-item {
      margin-top: 0.5em;
    }
  }
  #edit-status-counter { // hide the text counter
    display: none;
  }
  #status-submit-button {
    clear: both;
    text-align: right;
  }
  #status-update {
    margin-top: -.5em;
  }
  #status-update {
    .field-name-field-image {
      float: left;
      max-width: 50px;
    }
    div#speech-pointer {//adds pointer arrow to status update bubble on activity feed
    display: block;
    width: 12px;
    height: 18px;
    background: url(/sites/all/modules/custom/atwork_activity/img/speech-arrow.png) no-repeat;
    padding: 0;
    margin: -65px 0 50px 41px;
    position:absolute;
    }
    .form-textarea-wrapper {
      float: right;
      max-width: 200px;
      textarea {
        width: 197px;
      }
    }
  }
  #saving-notification-status {
    margin-left: 50px;
  }
  #activity-feed {
    clear: both;
    display: block;
    margin-top: .8em;
  }
  #atwork-activity-customize-feed-form .description {
    margin-bottom: 1em;
  }    
  .item-list { // the pager
    display: block;
    width: 252px;
    position: absolute;
    bottom: 18px;
    padding: 0 0 4px 0;
    margin: 0 0 0 5px;
    left:  0;
    background-color: #FFF;
  }

  ul.pager {
    margin: 0 auto;
    border-top: solid 1px #E0E0E0;
    padding-top:3px;
    padding-bottom: 3px;
    background-color: #FFF;
  }

}
/* ... */

